...
  -->

<resources>
    <string name="app_name">Code Monk</string>
    <string name="code_monk">Code Monk</string>
    <string name="dept_of_mca">Dept of MCA</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_format">nu24mcXXX@nmamit.in</string>
    <string name="password">Password</string>
    <string name="password_icon">Password Icon</string>
    <string name="re_password">Re-Type Password</string>
    <string name="re_password_icon">Re-Type Password Icon</string>
    <string name="show_hide_password">Show/Hide Password</string>
    <string name="show_hide_re_password">Show/Hide RePassword</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="login_success">Login Success</string>
    <string name="back">Back</string>
    <string name="find_account">Find account</string>
    <string name="blue_tick">Blue Tick</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="currently_working_on">"Currently working on "</string>
    <string name="team_members">Team members:</string>
    <string name="top_member">Top member %1$d</string>
...
