...

    @Serializable
    data object SendNotification : Route()

    companion object {
        val routes = listOf(
            Home,
            LeaderBoard,
            Post(),
            Notification,
            Profile
        )
    }
...
